<resources>
    <string name="app_name">Xposed Media Scanner Optimizer</string>
	<string name="launcher_name">Xposed Media Scanner Optimizer</string>

    <string name="prefs_category_scan_behavior">Scan Behavior</string>
    <string name="prefs_summ_category_scan_behavior">Settings to tweak which directories will be scanned</string>
    <string name="prefs_category_user_interaction">User Interaction</string>
    <string name="prefs_summ_category_user_interaction">Settings that relate to the User Interface like notifications and such</string>
    <string name="prefs_category_tools">Tools</string>
    <string name="prefs_summ_category_tools">Media Store maintenance tools</string>
    <string name="prefs_category_logging">Logging</string>
    <string name="prefs_summ_category_logging">Settings that determine what is being logged</string>
    <string name="prefs_category_misc">Miscellaneous</string>
    <string name="prefs_summ_category_misc" />

    <string name="pref_donate_title">Donate</string>
    <string name="pref_donate_summary">Donate for this app via Paypal</string>

    <string name="pref_prevent_repetitive_scans_state_title">Repetitive Scans</string>
    <string name="pref_prevent_repetitive_scans_enabled_summary">Prevent repetitive scans (suggested)</string>
    <string name="pref_prevent_repetitive_scans_disable_summary">Allow repetitive scans (consumes more time and battery)</string>
    
    <string name="pref_run_media_scanner_as_foreground_service_state_title">Service Importance</string>
    <string name="pref_run_media_scanner_as_foreground_service_enabled_summary">Run as foreground service (suggested)</string>
    <string name="pref_run_media_scanner_as_foreground_service_disable_summary">Run as background service</string>
    
    <string name="pref_run_media_scanner_with_background_thread_priority_title">Thread Priority</string>
    <string name="pref_run_media_scanner_with_background_thread_priority_enabled_summary">Force background thread priority (suggested)</string>
    <string name="pref_run_media_scanner_with_background_thread_priority_disable_summary">Keep default thread priority (which depends on whether the service runs as foreground service or not).</string>
    
    <string name="pref_restrict_directories_to_scan_title">Directories</string>
    <string name="pref_restrict_directories_to_scan_enabled_summary">Restrict scanning to directories that contain a .scanMedia file and subdirectories.</string>
    <string name="pref_restrict_directories_to_scan_disable_summary">Scan all directories. This consumes more time and adds media files from all directories to the media store.</string>

    <string name="pref_restrict_directories_to_scan_scan_two_levels_deep_title">Performance</string>
    <string name="pref_restrict_directories_to_scan_scan_two_levels_deep_enabled_summary">Search for .scanMedia files in the top-level directories and their direct children. This consumes more time.</string>
    <string name="pref_restrict_directories_to_scan_scan_two_levels_deep_disable_summary">Only search for .scanMedia files in top level directories (suggested). This saves time.</string>

    <string name="pref_restrict_to_certain_media_types_title">Media Types</string>
    <string name="pref_restrict_to_certain_media_types_enabled_summary">Restrict scanning for media types based upon the existence of .scanMusic, .scanVideo and .scanPictures files.</string>
    <string name="pref_restrict_to_certain_media_types_disable_summary">Scan all media types</string>

    <string name="pref_run_automatically_disable_summary">The media scanner will not run automatically, only when triggered manually</string>
    <string name="pref_run_automatically_enabled_summary">Runs the media scanner automatically (default behavior / suggested)</string>
    <string name="pref_run_automatically_title">Run automatically</string>

    <string name="pref_show_results_title">Result Notifications</string>
    <string name="pref_show_results_enabled_summary">Show results/durations for a scan using a notification</string>
    <string name="pref_show_results_disable_summary">Do not show any notifications when a scan is finished</string>
    
    <string name="pref_trigger_media_scan_title">Trigger MediaScanner</string>
    <string name="pref_trigger_media_scan_summary">Tap to trigger a media scan right now</string>
   
    <string name="pref_delete_media_store_title">Delete Media Store Contents</string>
    <string name="pref_delete_media_store_summary">Tap to delete existing entries in the media store (improves scan times when scans are restricted to certain directories or media types). Will not work in case a scan is currently in progress. This might take some seconds. A notification will be shown when the entries have been deleted.</string>

    <string name="pref_logging_state_title">Android Logging</string>
    <string name="pref_logging_disabled_summary">No log messages will be written to Android main log</string>
    <string name="pref_logging_enabled_summary">Logging to Android main log</string>

    <string name="pref_log_to_xposed_log_title">Xposed Log</string>
    <string name="pref_log_to_xposed_log_disabled_summary">No log message will be written to the Xposed log</string>
    <string name="pref_log_to_xposed_log_enabled_summary">Logging to Xposed log</string>

    <string name="pref_log_to_xposed_log_debug_title">Xposed Log Debug Level</string>
    <string name="pref_log_to_xposed_log_debug_disabled_summary">Debug logging to Xposed log is deactivated</string>
    <string name="pref_log_to_xposed_log_debug_enabled_summary">Debug logging to Xposed log is activated</string>

    <string name="pref_log_to_xposed_log_verbose_title">Xposed Log Verbose Level</string>
    <string name="pref_log_to_xposed_log_verbose_disabled_summary">Verbose logging to Xposed log is deactivated</string>
    <string name="pref_log_to_xposed_log_verbose_enabled_summary">Verbose logging to Xposed log is activated</string>

    <string name="pref_hide_donation_actions_title">Donations</string>
    <string name="pref_hide_donation_actions_disabled_summary">Donation actions are shown</string>
    <string name="pref_hide_donation_actions_enabled_summary">Donation actions will not be shown</string>

</resources>