<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
    <CheckBoxPreference
        android:defaultValue="true"
        android:key="pref_prevent_repetitive_scans_state"
        android:persistent="true"
        android:summaryOff="@string/pref_prevent_repetitive_scans_disable_summary"
        android:summaryOn="@string/pref_prevent_repetitive_scans_enabled_summary"
        android:title="@string/pref_prevent_repetitive_scans_state_title" />
    <CheckBoxPreference
        android:defaultValue="false"
        android:key="pref_restrict_directories_to_scan_state"
        android:persistent="true"
        android:summaryOff="@string/pref_restrict_directories_to_scan_disable_summary"
        android:summaryOn="@string/pref_restrict_directories_to_scan_enabled_summary"
        android:title="@string/pref_restrict_directories_to_scan_title" />
    <CheckBoxPreference
        android:dependency="pref_restrict_directories_to_scan_state"
        android:defaultValue="false"
        android:key="pref_restrict_directories_to_scan_scan_two_levels_deep_state"
        android:persistent="true"
        android:summaryOff="@string/pref_restrict_directories_to_scan_scan_two_levels_deep_disable_summary"
        android:summaryOn="@string/pref_restrict_directories_to_scan_scan_two_levels_deep_enabled_summary"
        android:title="@string/pref_restrict_directories_to_scan_scan_two_levels_deep_title" />
    <CheckBoxPreference
        android:defaultValue="false"
        android:key="pref_restrict_to_certain_media_types_state"
        android:persistent="true"
        android:summaryOff="@string/pref_restrict_to_certain_media_types_disable_summary"
        android:summaryOn="@string/pref_restrict_to_certain_media_types_enabled_summary"
        android:title="@string/pref_restrict_to_certain_media_types_title" />
    <CheckBoxPreference
        android:defaultValue="true"
        android:key="pref_run_automatically_state"
        android:persistent="true"
        android:summaryOff="@string/pref_run_automatically_disable_summary"
        android:summaryOn="@string/pref_run_automatically_enabled_summary"
        android:title="@string/pref_run_automatically_title" />
</PreferenceScreen>