<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
    <CheckBoxPreference
        android:defaultValue="false"
        android:key="pref_logging_enabled_state"
        android:persistent="true"
        android:summaryOff="@string/pref_logging_disabled_summary"
        android:summaryOn="@string/pref_logging_enabled_summary"
        android:title="@string/pref_logging_state_title" />
    <CheckBoxPreference
        android:defaultValue="false"
        android:key="pref_log_to_xposed_log_state"
        android:persistent="true"
        android:summaryOff="@string/pref_log_to_xposed_log_disabled_summary"
        android:summaryOn="@string/pref_log_to_xposed_log_enabled_summary"
        android:title="@string/pref_log_to_xposed_log_title" />
    <CheckBoxPreference
        android:dependency="pref_log_to_xposed_log_state"
        android:defaultValue="false"
        android:key="pref_log_to_xposed_log_debug_state"
        android:persistent="true"
        android:summaryOff="@string/pref_log_to_xposed_log_debug_disabled_summary"
        android:summaryOn="@string/pref_log_to_xposed_log_debug_enabled_summary"
        android:title="@string/pref_log_to_xposed_log_debug_title" />
    <CheckBoxPreference
        android:dependency="pref_log_to_xposed_log_state"
        android:defaultValue="false"
        android:key="pref_log_to_xposed_log_verbose_state"
        android:persistent="true"
        android:summaryOff="@string/pref_log_to_xposed_log_verbose_disabled_summary"
        android:summaryOn="@string/pref_log_to_xposed_log_verbose_enabled_summary"
        android:title="@string/pref_log_to_xposed_log_verbose_title" />
</PreferenceScreen>