<?xml version="1.0" encoding="utf-8"?>
<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">
    <header
        android:fragment="com.thomashofmann.xposed.mediascanneroptimizer.ScanBehaviorPreferenceFragment"
        android:title="@string/prefs_category_scan_behavior"
        android:summary="@string/prefs_summ_category_scan_behavior" />
    <header
        android:fragment="com.thomashofmann.xposed.mediascanneroptimizer.UserInteractionPreferenceFragment"
        android:title="@string/prefs_category_user_interaction"
        android:summary="@string/prefs_summ_category_user_interaction" />
    <header
        android:fragment="com.thomashofmann.xposed.mediascanneroptimizer.ToolsPreferenceFragment"
        android:title="@string/prefs_category_tools"
        android:summary="@string/prefs_summ_category_tools" />
    <header
        android:fragment="com.thomashofmann.xposed.mediascanneroptimizer.LoggingPreferenceFragment"
        android:title="@string/prefs_category_logging"
        android:summary="@string/prefs_summ_category_logging" />
    <header
        android:fragment="com.thomashofmann.xposed.mediascanneroptimizer.MiscellaneousPreferenceFragment"
        android:title="@string/prefs_category_misc"
        android:summary="@string/prefs_summ_category_misc" />
</preference-headers>